Fix PMD violations in bigdoors-core